# polymarket-backtester

./: STREAMLIT_SETUP.md  config.toml  polymarket_backtester.py  pyproject.toml
