[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-backtester"
version = "1.0.0"
description = "Polymarket 5-Min ETH/BTC Backtester with real API data"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.0.0",
    "requests>=2.25.0",
    "pandas>=1.0.0",
]
